grit section end

--- a/css/style.css
+++ b/css/style.css
@@ -320,7 +320,7 @@ body {
   font-family: "Inter", sans-serif;
 }
 
-#acardyon .acardyon__wrapper--titil button, #month .month__wrapper--top--button button, #today .today__wrapper--btn button {
+#products .products__wrapper--btn button, #acardyon .acardyon__wrapper--titil button, #month .month__wrapper--top--button button, #today .today__wrapper--btn button {
   display: inline-flex;
   padding: 16px 48px;
   justify-content: center;
@@ -333,10 +333,10 @@ body {
   font-size: 16px;
   font-weight: 500;
   line-height: 24px;
-  border: none;
+  border: 1px solid #DB4444;
   transition: all 0.2s linear;
 }
-#acardyon .acardyon__wrapper--titil button:hover, #month .month__wrapper--top--button button:hover, #today .today__wrapper--btn button:hover {
+#products .products__wrapper--btn button:hover, #acardyon .acardyon__wrapper--titil button:hover, #month .month__wrapper--top--button button:hover, #today .today__wrapper--btn button:hover {
   cursor: pointer;
   background: transparent;
   color: #000;
@@ -1459,6 +1459,253 @@ main {
   font-weight: 600;
   line-height: 21px;
   opacity: 0.5;
+}
+#products .products__wrapper--btn {
+  padding: 76px 0px 156px 468px;
+}
+#featured {
+  width: 100%;
+}
+#featured .featured__wrapper {
+  width: 100%;
+}
+#featured .featured__wrapper--top {
+  margin-bottom: 60px;
+}
+#featured .featured__wrapper--top p {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  color: #DB4444;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  margin-bottom: 20px;
+}
+#featured .featured__wrapper--top p span {
+  width: 20px;
+  height: 40px;
+  background: #DB4444;
+  border-radius: 3px;
+}
+#featured .featured__wrapper--top h1 {
+  color: #000;
+  font-family: Inter;
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 48px;
+  letter-spacing: 1.44px;
+  margin: 0;
+}
+#featured .featured__wrapper--botton {
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  grid-template-rows: repeat(2, auto);
+  gap: 30px;
+}
+#featured .featured__wrapper--botton--card1 {
+  background: #000;
+  position: relative;
+  grid-column: 1/3;
+  grid-row: 1/3;
+  width: 570px;
+  height: 600px;
+  border-radius: 4px;
+}
+#featured .featured__wrapper--botton--card1-titil {
+  position: absolute;
+  bottom: 32px;
+  left: 32px;
+  z-index: 10;
+}
+#featured .featured__wrapper--botton--card1-titil h1 {
+  color: #FAFAFA;
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 0.72px;
+}
+#featured .featured__wrapper--botton--card1-titil p {
+  width: 242px;
+  color: var(--Text, #FAFAFA);
+  font-family: Poppins;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+}
+#featured .featured__wrapper--botton--card1-titil h2 {
+  display: inline-block;
+  color: #FFF;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  border-bottom: 0.2px solid #828282;
+}
+#featured .featured__wrapper--botton--card1--img {
+  position: absolute;
+  bottom: -7px;
+}
+#featured .featured__wrapper--botton--card2 {
+  background: #000;
+  position: relative;
+  grid-column: 3/5;
+  grid-row: 1/2;
+  width: 570px;
+  height: 284px;
+  border-radius: 4px;
+}
+#featured .featured__wrapper--botton--card2-titil {
+  position: absolute;
+  bottom: 32px;
+  left: 32px;
+  z-index: 10;
+}
+#featured .featured__wrapper--botton--card2-titil h1 {
+  color: #FAFAFA;
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 0.72px;
+}
+#featured .featured__wrapper--botton--card2-titil p {
+  width: 242px;
+  color: var(--Text, #FAFAFA);
+  font-family: Poppins;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+}
+#featured .featured__wrapper--botton--card2-titil h2 {
+  display: inline-block;
+  color: #FFF;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  border-bottom: 0.2px solid #828282;
+}
+#featured .featured__wrapper--botton--card2--img {
+  position: absolute;
+  bottom: -7px;
+  right: 0;
+}
+#featured .featured__wrapper--botton--card3 {
+  background: #000;
+  position: relative;
+  grid-column: 3/4;
+  grid-row: 2/3;
+  width: 270px;
+  height: 284px;
+  border-radius: 4px;
+}
+#featured .featured__wrapper--botton--card3-titil {
+  position: absolute;
+  bottom: 32px;
+  left: 32px;
+  z-index: 10;
+}
+#featured .featured__wrapper--botton--card3-titil h1 {
+  color: #FAFAFA;
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 0.72px;
+}
+#featured .featured__wrapper--botton--card3-titil p {
+  width: 242px;
+  color: var(--Text, #FAFAFA);
+  font-family: Poppins;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+}
+#featured .featured__wrapper--botton--card3-titil h2 {
+  display: inline-block;
+  color: #FFF;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  border-bottom: 0.2px solid #828282;
+}
+#featured .featured__wrapper--botton--card3--img {
+  position: absolute;
+  top: 31px;
+  left: 40px;
+  z-index: 5;
+}
+#featured .featured__wrapper--botton--card3--radus {
+  width: 208px;
+  height: 208px;
+  flex-shrink: 0;
+  background: rgba(217, 217, 217, 0.9);
+  filter: blur(150px);
+  z-index: 0;
+  background-repeat: 50%;
+}
+#featured .featured__wrapper--botton--card4 {
+  background: #000;
+  position: relative;
+  grid-column: 4/5;
+  grid-row: 2/3;
+  width: 270px;
+  height: 284px;
+  border-radius: 4px;
+}
+#featured .featured__wrapper--botton--card4-titil {
+  position: absolute;
+  bottom: 32px;
+  left: 32px;
+  z-index: 10;
+}
+#featured .featured__wrapper--botton--card4-titil h1 {
+  color: #FAFAFA;
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 0.72px;
+}
+#featured .featured__wrapper--botton--card4-titil p {
+  width: 242px;
+  color: var(--Text, #FAFAFA);
+  font-family: Poppins;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+}
+#featured .featured__wrapper--botton--card4-titil h2 {
+  display: inline-block;
+  color: #FFF;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  border-bottom: 0.2px solid #828282;
+}
+#featured .featured__wrapper--botton--card4--img {
+  position: absolute;
+  top: 31px;
+  left: 40px;
+  z-index: 5;
+}
+#featured .featured__wrapper--botton--card4--radus {
+  width: 208px;
+  height: 208px;
+  flex-shrink: 0;
+  background: rgba(217, 217, 217, 0.9);
+  filter: blur(150px);
+  z-index: 0;
+  background-repeat: 50%;
 }
 
 footer {
