--- a/scss/_extend.scss
+++ b/scss/_extend.scss
@@ -13,7 +13,7 @@
     font-size: 16px;
     font-weight: 500;
     line-height: 24px;
-    border: none;
+    border: 1px solid #DB4444;
     transition: all .2s linear;
 
     &:hover{
