--- a/scss/all/_layout.scss
+++ b/scss/all/_layout.scss
@@ -7,4 +7,5 @@
 @import "./section-month";
 @import "./acardyon";
 @import "./section-products";
+@import "./section-featured";
 @import "./footer";
