--- a/css/style.css
+++ b/css/style.css
@@ -1764,4 +1764,108 @@ main {
 
 footer {
   width: 100%;
+  padding: 80px 0px 24px;
+  background: #000000;
+}
+footer .footer__top {
+  width: 100%;
+  padding-bottom: 60px;
+}
+footer .footer__top--titil {
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+  list-style: none;
+}
+footer .footer__top--titil--list h1 {
+  color: var(--Text, #FAFAFA);
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 0.72px;
+}
+footer .footer__top--titil--list h2 {
+  color: var(--Text, #FAFAFA);
+  font-family: Poppins;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 28px;
+  margin-bottom: 24px;
+}
+footer .footer__top--titil--list p {
+  width: 175px;
+  color: var(--Text, #FAFAFA);
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  margin-bottom: 16px;
+}
+footer .footer__top--titil--list h3 {
+  color: var(--Text, #FAFAFA);
+  font-family: Poppins;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 18px;
+  opacity: 0.7;
+  margin-bottom: 10px;
+}
+footer .footer__top--titil--list--input {
+  width: 217px;
+  height: 48px;
+  border-radius: 4px;
+  position: relative;
+}
+footer .footer__top--titil--list--input input {
+  width: 217px;
+  padding: 12px 38px 12px 16px;
+  border-radius: 4px;
+  background: transparent;
+  color: #FAFAFA;
+  border: 1.5px solid var(--Text, #FAFAFA);
+}
+footer .footer__top--titil--list--input svg {
+  position: absolute;
+  right: 12px;
+  top: 10px;
+}
+footer .footer__top--titil--list--input svg:hover {
+  cursor: pointer;
+}
+footer .footer__top--titil--list--input svg:hover path {
+  stroke: aqua;
+}
+footer .footer__top--titil--list--wrapper {
+  display: flex;
+  align-items: start;
+  gap: 8px;
+}
+footer .footer__top--titil--list--wrapper--right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 10px;
+}
+footer .footer__top--titil--list--logos {
+  margin-top: 24px;
+  display: flex;
+  align-items: center;
+  gap: 14px;
+}
+footer .footer__top--titil--list--logos span {
+  display: block;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: transparent;
+  border-radius: 50%;
+  transition: all 0.3s linear;
+}
+footer .footer__top--titil--list--logos span:hover {
+  background: #DB4444;
+  cursor: pointer;
+  transition: all 0.3s linear;
 }/*# sourceMappingURL=style.css.map */
