--- a/scss/all/_footer.scss
+++ b/scss/all/_footer.scss
@@ -1,4 +1,125 @@
 footer{
     width: 100%;
-    // codes
+    padding: 80px 0px 24px;
+    background: #000000; 
+
+    .footer__top{
+        width: 100%;
+        padding-bottom: 60px;
+
+        &--titil{
+            display: flex;
+            align-items: start;
+            justify-content: space-between;
+            list-style: none;
+
+            &--list{
+
+                h1{
+                    color: var(--Text, #FAFAFA);
+                    font-family: Inter;
+                    font-size: 24px;
+                    font-weight: 700;
+                    line-height: 24px; 
+                    letter-spacing: 0.72px;
+                }
+
+                h2{
+                    color: var(--Text, #FAFAFA);
+                    font-family: Poppins;
+                    font-size: 20px;
+                    font-weight: 500;
+                    line-height: 28px;
+                    margin-bottom: 24px;
+                }
+
+                p{
+                    width: 175px;
+                    color: var(--Text, #FAFAFA);
+                    font-family: Poppins;
+                    font-size: 16px;
+                    font-weight: 400;
+                    line-height: 24px;
+                    margin-bottom: 16px;
+                }
+
+                h3{
+                    color: var(--Text, #FAFAFA);
+                    font-family: Poppins;
+                    font-size: 12px;
+                    font-weight: 500;
+                    line-height: 18px; 
+                    opacity: 0.7;
+                    margin-bottom: 10px;
+                }
+
+                &--input{
+                    width: 217px;
+                    height: 48px;
+                    border-radius: 4px;
+                    position: relative;
+
+                    input{
+                        width: 217px;
+                        padding: 12px 38px 12px 16px;
+                        border-radius: 4px;
+                        background: transparent;
+                        color: #FAFAFA;
+                        border: 1.5px solid var(--Text, #FAFAFA);
+                    }
+
+                    svg{
+                        position: absolute;
+                        right: 12px;
+                        top: 10px;
+
+                        &:hover{
+                            cursor: pointer;
+                            path{
+                                stroke: aqua;
+                            }
+                        }
+                    }
+                }
+
+                &--wrapper{
+                    display: flex;
+                    align-items: start;
+                    gap: 8px;
+
+                    &--right{
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        row-gap: 10px;
+                    }
+                }
+
+                &--logos{
+                    margin-top: 24px;
+                    display: flex;
+                    align-items: center;
+                    gap: 14px;
+
+                    span{
+                        display: block;
+                        width: 40px;
+                        height: 40px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        background: transparent;
+                        border-radius: 50%;
+                        transition: all .3s linear;
+
+                        &:hover{
+                            background: #DB4444; 
+                            cursor: pointer;
+                            transition: all .3s linear; 
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
