--- a/scss/all/_footer.scss
+++ b/scss/all/_footer.scss
@@ -123,3 +123,29 @@ footer{
         }
     }
 }
+
+#footer__botton{
+    width: 100%;
+    border-top: 1px solid #FFF;
+    opacity: 0.6;
+
+    .footer__botton{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 6px;
+        padding-top: 16px;
+        border-top: 1px solid #FFF;
+        opacity: 0.6;
+
+        a{
+            text-decoration: none;
+            color: var(--Primary, #FFF);
+            font-family: Poppins;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 24px;
+        }
+    }
+}
