--- a/style.scss
+++ b/style.scss
@@ -7,3 +7,5 @@
 @import "./scss/extend";
 @import "./scss/all/layout";
 @import "./scss/siginup/siginup-intro";
+@import "./scss/login-page/login-intro";
+@import "./scss/wishlist/wishlist-intro";
