--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -11,3 +11,7 @@ body{
     font-family: 'Poppins', sans-serif;
     font-family: 'Inter', sans-serif;
 } 
+
+::-webkit-scrollbar{
+    width: 0;
+}
