--- a/scss/all/_footer.scss
+++ b/scss/all/_footer.scss
@@ -22,6 +22,7 @@ footer{
                     font-weight: 700;
                     line-height: 24px; 
                     letter-spacing: 0.72px;
+                    margin-top: 0;
                 }
 
                 h2{
