--- a/scss/all/_section-cotegores.scss
+++ b/scss/all/_section-cotegores.scss
@@ -71,8 +71,11 @@
         &--botton{
             display: flex;
             align-items: center;
+            justify-content: center;
             gap: 30px;
             padding-top: 60px;
+            // overflow: hidden;
+            // overflow-x: scroll;
 
             &--card{
                 display: flex;
@@ -102,8 +105,8 @@
                     box-shadow: 0px 1px 13px 0px rgba(0, 0, 0, 0.05);
                     transition: all .2s linear;
 
-                    svg > path{
-                        stroke: #FFF !important;
+                    svg g path{
+                        stroke: white !important;
                     }
 
                     p{
