Wishlist page end

--- a/css/style.css
+++ b/css/style.css
@@ -348,6 +348,30 @@ body {
   transition: all 0.2s linear;
 }
 
+#wishlist__intro .wishlist__intro--wrapper--botton--titil button, #wishlist__intro .wishlist__intro--wrapper--top--titil button {
+  display: inline-flex;
+  padding: 16px 48px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 4px;
+  background: transparent;
+  color: #000;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  transition: all 0.2s linear;
+}
+#wishlist__intro .wishlist__intro--wrapper--botton--titil button:hover, #wishlist__intro .wishlist__intro--wrapper--top--titil button:hover {
+  cursor: pointer;
+  background: #DB4444;
+  color: #FAFAFA;
+  border: 1px solid #DB4444;
+  transition: all 0.2s linear;
+}
+
 .container {
   max-width: 1170px;
   margin: 0 auto;
@@ -2040,4 +2064,335 @@ footer .footer__top--titil--list--logos span:hover {
   font-weight: 400;
   line-height: 24px;
   margin-bottom: 0;
+}
+
+#wishlist__intro {
+  width: 100%;
+  margin-top: 222px;
+}
+#wishlist__intro .wishlist__intro--wrapper {
+  width: 100%;
+}
+#wishlist__intro .wishlist__intro--wrapper--top {
+  padding-bottom: 80px;
+}
+#wishlist__intro .wishlist__intro--wrapper--top--titil {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 60px;
+}
+#wishlist__intro .wishlist__intro--wrapper--top--titil p {
+  color: #000;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 26px;
+}
+#wishlist__intro .wishlist__intro--wrapper--top--cards {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+#wishlist__intro .wishlist__intro--wrapper--top--cards a {
+  text-decoration: none;
+}
+#wishlist__intro .wishlist__intro--wrapper--top--cards--card {
+  width: 270px;
+  position: relative;
+}
+#wishlist__intro .wishlist__intro--wrapper--top--cards--card--btn {
+  width: 270px;
+  height: 41px;
+  flex-shrink: 0;
+  border-radius: 0px 0px 4px 4px;
+  background: #000;
+  color: #FFF;
+  font-family: Poppins;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  border: none;
+}
+#wishlist__intro .wishlist__intro--wrapper--top--cards--card:hover {
+  cursor: pointer;
+}
+#wishlist__intro .wishlist__intro--wrapper--top--cards--card:hover .today__wrapper--cards--card--btn {
+  display: block;
+}
+#wishlist__intro .wishlist__intro--wrapper--top--cards--card--top {
+  position: relative;
+  width: 270px;
+  height: 250px;
+  border-radius: 4px;
+  background: #F5F5F5;
+  padding: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#wishlist__intro .wishlist__intro--wrapper--top--cards--card--top p {
+  display: inline-block;
+  padding: 4px 12px;
+  gap: 10px;
+  border-radius: 4px;
+  color: #FFF;
+  background: #DB4444;
+  position: absolute;
+  top: 12px;
+  left: 12px;
+}
+#wishlist__intro .wishlist__intro--wrapper--top--cards--card--top--spen1 {
+  width: 34px;
+  height: 34px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background: #FFF;
+  position: absolute;
+  top: 12px;
+  right: 12px;
+}
+#wishlist__intro .wishlist__intro--wrapper--top--cards--card--top--spen1:hover {
+  cursor: pointer;
+  background: #DB4444;
+}
+#wishlist__intro .wishlist__intro--wrapper--top--cards--card--top--spen1:hover svg path {
+  stroke: #FFF;
+}
+#wishlist__intro .wishlist__intro--wrapper--top--cards--card--top--spen2 {
+  width: 34px;
+  height: 34px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background: #FFF;
+  position: absolute;
+  top: 54px;
+  right: 12px;
+}
+#wishlist__intro .wishlist__intro--wrapper--top--cards--card--top--spen2:hover {
+  cursor: pointer;
+  background: #DB4444;
+}
+#wishlist__intro .wishlist__intro--wrapper--top--cards--card--top--spen2:hover svg path {
+  stroke: #FFF;
+}
+#wishlist__intro .wishlist__intro--wrapper--top--cards--card--botton {
+  margin-top: 16px;
+}
+#wishlist__intro .wishlist__intro--wrapper--top--cards--card--botton h2 {
+  color: #000;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+}
+#wishlist__intro .wishlist__intro--wrapper--top--cards--card--botton--h3 {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  margin: 8px 0;
+}
+#wishlist__intro .wishlist__intro--wrapper--top--cards--card--botton--h3--span1 {
+  color: #DB4444;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+}
+#wishlist__intro .wishlist__intro--wrapper--top--cards--card--botton--h3--span2 {
+  color: #000;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  opacity: 0.5;
+  text-decoration: line-through;
+}
+#wishlist__intro .wishlist__intro--wrapper--top--cards--card--botton--p {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 10px;
+}
+#wishlist__intro .wishlist__intro--wrapper--top--cards--card--botton--p--span {
+  color: #000;
+  font-family: Poppins;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 21px;
+  opacity: 0.5;
+}
+#wishlist__intro .wishlist__intro--wrapper--botton--titil {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 60px;
+}
+#wishlist__intro .wishlist__intro--wrapper--botton--titil p {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  color: #000;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 26px;
+}
+#wishlist__intro .wishlist__intro--wrapper--botton--cards {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  margin-bottom: 140px;
+}
+#wishlist__intro .wishlist__intro--wrapper--botton--cards a {
+  text-decoration: none;
+}
+#wishlist__intro .wishlist__intro--wrapper--botton--cards--card {
+  width: 270px;
+  position: relative;
+}
+#wishlist__intro .wishlist__intro--wrapper--botton--cards--card--btn {
+  width: 270px;
+  height: 41px;
+  flex-shrink: 0;
+  border-radius: 0px 0px 4px 4px;
+  background: #000;
+  color: #FFF;
+  font-family: Poppins;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  border: none;
+}
+#wishlist__intro .wishlist__intro--wrapper--botton--cards--card:hover {
+  cursor: pointer;
+}
+#wishlist__intro .wishlist__intro--wrapper--botton--cards--card:hover .today__wrapper--cards--card--btn {
+  display: block;
+}
+#wishlist__intro .wishlist__intro--wrapper--botton--cards--card--top {
+  position: relative;
+  width: 270px;
+  height: 250px;
+  border-radius: 4px;
+  background: #F5F5F5;
+  padding: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#wishlist__intro .wishlist__intro--wrapper--botton--cards--card--top p {
+  display: inline-block;
+  padding: 4px 12px;
+  gap: 10px;
+  border-radius: 4px;
+  color: #FFF;
+  background: #DB4444;
+  position: absolute;
+  top: 12px;
+  left: 12px;
+}
+#wishlist__intro .wishlist__intro--wrapper--botton--cards--card--top--spen1 {
+  width: 34px;
+  height: 34px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background: #FFF;
+  position: absolute;
+  top: 12px;
+  right: 12px;
+}
+#wishlist__intro .wishlist__intro--wrapper--botton--cards--card--top--spen1:hover {
+  cursor: pointer;
+  background: #DB4444;
+}
+#wishlist__intro .wishlist__intro--wrapper--botton--cards--card--top--spen1:hover svg path {
+  stroke: #FFF;
+}
+#wishlist__intro .wishlist__intro--wrapper--botton--cards--card--top--spen2 {
+  width: 34px;
+  height: 34px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background: #FFF;
+  position: absolute;
+  top: 54px;
+  right: 12px;
+}
+#wishlist__intro .wishlist__intro--wrapper--botton--cards--card--top--spen2:hover {
+  cursor: pointer;
+  background: #DB4444;
+}
+#wishlist__intro .wishlist__intro--wrapper--botton--cards--card--top--spen2:hover svg path {
+  stroke: #FFF;
+}
+#wishlist__intro .wishlist__intro--wrapper--botton--cards--card--botton {
+  margin-top: 16px;
+}
+#wishlist__intro .wishlist__intro--wrapper--botton--cards--card--botton h2 {
+  color: #000;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+}
+#wishlist__intro .wishlist__intro--wrapper--botton--cards--card--botton--h3 {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  margin: 8px 0;
+}
+#wishlist__intro .wishlist__intro--wrapper--botton--cards--card--botton--h3--span1 {
+  color: #DB4444;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+}
+#wishlist__intro .wishlist__intro--wrapper--botton--cards--card--botton--h3--span2 {
+  color: #000;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  opacity: 0.5;
+  text-decoration: line-through;
+}
+#wishlist__intro .wishlist__intro--wrapper--botton--cards--card--botton--p {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 10px;
+}
+#wishlist__intro .wishlist__intro--wrapper--botton--cards--card--botton--p--span {
+  color: #000;
+  font-family: Poppins;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 21px;
+  opacity: 0.5;
 }/*# sourceMappingURL=style.css.map */
