--- a/scss/_extend.scss
+++ b/scss/_extend.scss
@@ -25,5 +25,30 @@
     }
 }
 
+%btn2{
+    display: inline-flex;
+    padding: 16px 48px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 4px;
+    background: transparent;
+    color: #000;
+    font-family: Poppins;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    border: 1px solid rgba(0, 0, 0, 0.50);
+    transition: all .2s linear;
+
+    &:hover{
+        cursor: pointer;
+        background: #DB4444;
+        color: #FAFAFA;
+        border: 1px solid #DB4444;
+        transition: all .2s linear;
+    }
+}
+
 
 // @exstend %extandName; call to extend
