--- a/style.scss
+++ b/style.scss
@@ -9,3 +9,4 @@
 @import "./scss/siginup/siginup-intro";
 @import "./scss/login-page/login-intro";
 @import "./scss/wishlist/wishlist-intro";
+@import "./scss/cart/all";
