--- a/css/style.css
+++ b/css/style.css
@@ -324,7 +324,7 @@ body {
   width: 0;
 }
 
-#login__intro .login--intro--wrapper--right form div button, #siginup__intro .siginup--intro--wrapper--right form .googl-btn, #siginup__intro .siginup--intro--wrapper--right form button, #products .products__wrapper--btn button, #acardyon .acardyon__wrapper--titil button, #month .month__wrapper--top--button button, #today .today__wrapper--btn button {
+#cart__main .cart__main--wrapper--card4--right button, #cart__main .cart__main--wrapper--card4--left button, #login__intro .login--intro--wrapper--right form div button, #siginup__intro .siginup--intro--wrapper--right form .googl-btn, #siginup__intro .siginup--intro--wrapper--right form button, #products .products__wrapper--btn button, #acardyon .acardyon__wrapper--titil button, #month .month__wrapper--top--button button, #today .today__wrapper--btn button {
   display: inline-flex;
   padding: 16px 48px;
   justify-content: center;
@@ -340,7 +340,7 @@ body {
   border: 1px solid #DB4444;
   transition: all 0.2s linear;
 }
-#login__intro .login--intro--wrapper--right form div button:hover, #siginup__intro .siginup--intro--wrapper--right form .googl-btn:hover, #siginup__intro .siginup--intro--wrapper--right form button:hover, #products .products__wrapper--btn button:hover, #acardyon .acardyon__wrapper--titil button:hover, #month .month__wrapper--top--button button:hover, #today .today__wrapper--btn button:hover {
+#cart__main .cart__main--wrapper--card4--right button:hover, #cart__main .cart__main--wrapper--card4--left button:hover, #login__intro .login--intro--wrapper--right form div button:hover, #siginup__intro .siginup--intro--wrapper--right form .googl-btn:hover, #siginup__intro .siginup--intro--wrapper--right form button:hover, #products .products__wrapper--btn button:hover, #acardyon .acardyon__wrapper--titil button:hover, #month .month__wrapper--top--button button:hover, #today .today__wrapper--btn button:hover {
   cursor: pointer;
   background: transparent;
   color: #000;
@@ -348,7 +348,7 @@ body {
   transition: all 0.2s linear;
 }
 
-#wishlist__intro .wishlist__intro--wrapper--botton--titil button, #wishlist__intro .wishlist__intro--wrapper--top--titil button {
+#cart__main .cart__main--wrapper--btn button, #wishlist__intro .wishlist__intro--wrapper--botton--titil button, #wishlist__intro .wishlist__intro--wrapper--top--titil button {
   display: inline-flex;
   padding: 16px 48px;
   justify-content: center;
@@ -364,7 +364,7 @@ body {
   border: 1px solid rgba(0, 0, 0, 0.5);
   transition: all 0.2s linear;
 }
-#wishlist__intro .wishlist__intro--wrapper--botton--titil button:hover, #wishlist__intro .wishlist__intro--wrapper--top--titil button:hover {
+#cart__main .cart__main--wrapper--btn button:hover, #wishlist__intro .wishlist__intro--wrapper--botton--titil button:hover, #wishlist__intro .wishlist__intro--wrapper--top--titil button:hover {
   cursor: pointer;
   background: #DB4444;
   color: #FAFAFA;
@@ -383,7 +383,7 @@ header {
   width: 100%;
   position: fixed;
   top: 0;
-  z-index: 33;
+  z-index: 44;
   backdrop-filter: blur(20px);
 }
 header #header__top {
@@ -2395,4 +2395,223 @@ footer .footer__top--titil--list--logos span:hover {
   font-weight: 600;
   line-height: 21px;
   opacity: 0.5;
+}
+
+#cart__intro {
+  width: 100%;
+  margin-top: 222px;
+  padding-bottom: 80px;
+}
+#cart__intro .cart__intro--wrapper {
+  width: 100%;
+}
+#cart__intro .cart__intro--wrapper--top {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+#cart__intro .cart__intro--wrapper--top p {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+#cart__intro .cart__intro--wrapper--top p a {
+  text-decoration: none;
+  color: var(--Text2, #000);
+  font-family: Poppins;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  opacity: 0.5;
+}
+#cart__intro .cart__intro--wrapper--top p a:hover {
+  opacity: 1;
+}
+#cart__intro .cart__intro--wrapper--top p span {
+  color: var(--Text2, #000);
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 21px;
+  opacity: 0.5;
+}
+#cart__intro .cart__intro--wrapper--top h4 {
+  margin: 0;
+}
+#cart__intro .cart__intro--wrapper--top h4 a {
+  text-decoration: none;
+  color: var(--Text2, #000);
+  font-family: Poppins;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+}
+
+#cart__main {
+  width: 100%;
+}
+#cart__main .cart__main--wrapper {
+  width: 100%;
+}
+#cart__main .cart__main--wrapper--card1 {
+  width: 1170px;
+  height: 72px;
+  padding: 24px 39px 24px 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 4px;
+  background: var(--Primary, #FFF);
+  box-shadow: 0px 1px 13px 0px rgba(0, 0, 0, 0.05);
+  margin-bottom: 40px;
+}
+#cart__main .cart__main--wrapper--card1 p {
+  color: var(--Text2, #000);
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+}
+#cart__main .cart__main--wrapper--card1 p:nth-child(2) {
+  margin-left: 110px;
+}
+#cart__main .cart__main--wrapper--card2 {
+  width: 1170px;
+  height: 72px;
+  padding: 24px 39px 24px 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 177px;
+  border-radius: 4px;
+  background: var(--Primary, #FFF);
+  box-shadow: 0px 1px 13px 0px rgba(0, 0, 0, 0.05);
+  margin-bottom: 40px;
+}
+#cart__main .cart__main--wrapper--card2 p {
+  color: var(--Text2, #000);
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+  position: relative;
+}
+#cart__main .cart__main--wrapper--card2 p svg {
+  position: absolute;
+  top: -10px;
+  left: -10px;
+}
+#cart__main .cart__main--wrapper--card2 p input {
+  display: flex;
+  width: 72px;
+  height: 44px;
+  padding: 6px 12px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1.5px solid rgba(0, 0, 0, 0.4);
+}
+#cart__main .cart__main--wrapper--card3 {
+  width: 1170px;
+  height: 72px;
+  padding: 24px 39px 24px 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 177px;
+  border-radius: 4px;
+  background: var(--Primary, #FFF);
+  box-shadow: 0px 1px 13px 0px rgba(0, 0, 0, 0.05);
+  margin-bottom: 24px;
+}
+#cart__main .cart__main--wrapper--card3 p {
+  color: var(--Text2, #000);
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+  position: relative;
+}
+#cart__main .cart__main--wrapper--card3 p svg {
+  position: absolute;
+  top: -10px;
+  left: -10px;
+}
+#cart__main .cart__main--wrapper--card3 p input {
+  display: flex;
+  width: 72px;
+  height: 44px;
+  padding: 6px 12px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1.5px solid rgba(0, 0, 0, 0.4);
+}
+#cart__main .cart__main--wrapper--btn {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 80px;
+}
+#cart__main .cart__main--wrapper--card4 {
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+  margin-bottom: 140px;
+}
+#cart__main .cart__main--wrapper--card4--left {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+#cart__main .cart__main--wrapper--card4--left input {
+  display: block;
+  width: 300px;
+  display: flex;
+  padding: 19px 24px;
+  align-items: center;
+  border-radius: 4px;
+  border: 1px solid #000;
+}
+#cart__main .cart__main--wrapper--card4--right {
+  width: 470px;
+  height: 344px;
+  border-radius: 4px;
+  border: 1.5px solid #000;
+  padding: 32px 24px;
+}
+#cart__main .cart__main--wrapper--card4--right h3 {
+  color: var(--Text2, #000);
+  font-family: Poppins;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 28px;
+  margin-bottom: 24px;
+}
+#cart__main .cart__main--wrapper--card4--right p {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 16px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.4);
+  margin-bottom: 16px;
+  color: var(--Text2, #000);
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+}
+#cart__main .cart__main--wrapper--card4--right button {
+  margin-left: 65px;
 }/*# sourceMappingURL=style.css.map */
