--- a/css/style.css
+++ b/css/style.css
@@ -445,6 +445,9 @@ header #header__botton .header__botton--wrapper--titl {
   gap: 48px;
   list-style: none;
 }
+header #header__botton .header__botton--wrapper--titl--list .click {
+  border-bottom: 2px solid #7a7a7a !important;
+}
 header #header__botton .header__botton--wrapper--titl--list-link {
   text-decoration: none;
   color: #000;
@@ -458,7 +461,7 @@ header #header__botton .header__botton--wrapper--titl--list-link {
   transition: all 0.2s linear;
 }
 header #header__botton .header__botton--wrapper--titl--list-link:hover {
-  border-bottom: 1px solid #7a7a7a;
+  border-bottom: 2px solid #7a7a7a;
   transition: all 0.2s linear;
 }
 header #header__botton .header__botton--wrapper--right {
@@ -2614,4 +2617,64 @@ footer .footer__top--titil--list--logos span:hover {
 }
 #cart__main .cart__main--wrapper--card4--right button {
   margin-left: 65px;
+}
+
+#checout__intro {
+  width: 100%;
+}
+#checout__intro .checout__intro--wrzpper {
+  width: 100%;
+}
+#checout__intro .checout__intro--wrzpper--form {
+  margin-bottom: 140px;
+}
+#checout__intro .checout__intro--wrzpper--form--left h2 {
+  color: var(--Text2, #000);
+  font-family: Inter;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 30px;
+  letter-spacing: 1.44px;
+  margin-bottom: 48px;
+}
+#checout__intro .checout__intro--wrzpper--form--left label p {
+  color: var(--Text2, #000);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  opacity: 0.4;
+  margin-bottom: 8px;
+}
+#checout__intro .checout__intro--wrzpper--form--left label p:hover {
+  cursor: pointer;
+  opacity: 1;
+}
+#checout__intro .checout__intro--wrzpper--form--left label input {
+  width: 470px;
+  height: 50px;
+  border-radius: 4px;
+  background: var(--Secondary, #F5F5F5);
+  border: none;
+  margin-bottom: 32px;
+  padding: 8px;
+}
+#checout__intro .checout__intro--wrzpper--form--left p {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  color: #000;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+}
+#checout__intro .checout__intro--wrzpper--form--left p input {
+  width: 24px;
+  height: 24px;
+}
+#checout__intro .checout__intro--wrzpper--form--left p input:checked {
+  background: red;
 }/*# sourceMappingURL=style.css.map */
