--- a/style.scss
+++ b/style.scss
@@ -10,3 +10,4 @@
 @import "./scss/login-page/login-intro";
 @import "./scss/wishlist/wishlist-intro";
 @import "./scss/cart/all";
+@import "./scss/chec-out/chec-out-all";
