--- a/scss/chec-out/_checout--intro.scss
+++ b/scss/chec-out/_checout--intro.scss
@@ -49,6 +49,7 @@
                         border: none;
                         margin-bottom: 32px;
                         padding: 8px;
+                        color: #333333;
                     }
                 }
 
